<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="facebook_app_id">1291561327561123</string>
    
    <string name="app_name">Chopsticks</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="desc"></string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="zero">zero</string>
    <string name="yourturn">Your Turn</string>
    <string name="restart">Restart</string>
    <string name="returnTo">Return to Main Menu</string>
                             
    <string name="tutorial_one">Chopsticks is a two player stategy game in which players start off extending a single finger from each hand.</string>
    <string name="tutorial_two">Players make turn-based moves by either transferring fingers amongst their own hands or attacking and therefore adding their hand\'s value to their opponent\’s hand.</string>
    <string name="tutorial_three">When transferring, the resulting number of fingers will contain the same as at the beginning of your turn.  For example, a player having three fingers on one hand and one on the other may choose to transfer to have two fingers on each hand.</string>
	<string name="tutorial_four">When attacking, the number of fingers on your "attacking hand" do not change, however your opponents "attacked hand" will be the sum of your hand\'s value and theirs.</string>
	<string name="tutorial_five">If a player\'s hand sums to a value greater than 4 that hand is "dead" and can no longer be used to attack, however you can "revive" it when transferring fingers.</string>
    <string name="tutorial_six">You win when your opponent has two dead hands. Do you want to try a match against an A.I.?</string>
	
    <string name="logout">Play offline single player and multiplayer.</string>
<string name="game_title">Chopsticks Online!</string>
<string name="game_name">Chopsticks!</string>
    <string name="game_blurb">A remake of the classic game of chopsticks!\nPlay online, offline, or single player!\n Can you beat your friends?\nOnly one way to find out!\nTo play online you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
     <string name="offline">Offline Game</string>
    <string name="tutorial">Instructions</string>
    <string name="banner_ad_unit_id">ca-app-pub-4855453117166877/6239393543</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See current invitations and games.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    
    <string name="see_leaderboard">Check your rank on the leaderboards.</string>
    
       
    <string name="LEADERBOARD_ID">CgkIgvCkx_EZEAIQBw</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email (required if registering)</string>
    <string name="signin_button">Log in with Google+</string>
    <string name="register_button">Register now</string>
    <string name="opponent_input">Friend name</string>
    <string name="create_game_button">Start Game</string>
    <string name="welcome">TicTacToe welcomes you</string>
    <string name="sign_out_button">Signout</string>
    <string name="submit_button">Submit</string>
	<string name="reload_button">Reload games</string>
	<string name="rematch_button">Play again</string>
	 <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
       <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
	  <string name="error_config">Please set the %1$s constant and recompile the app.</string>	
	  
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
</resources>
